+ Σε κάθε νέα έκδοση του προγράμματος, την πρώτη φορά που θα εκτελείται το πρόγραμμα, θα προσθέτει στο τρέχον αρχείο ρυθμίσεων τυχόν νέες κρατήσεις. # Αντί για κωδικοποίηση χαρακτήρων «windows-1253» (ελληνικά) που χρησιμοποιούνταν μέχρι τώρα, τόσο στον κώδικα όσο και στα αρχεία δαπανών, τώρα χρησιμοποιείται «utf-8». Αυτό επιφέρει ασυμβατότητα με τις παλαιότερες εκδόσεις. Για το λόγο αυτό, όταν φορτώνεται αρχείο δαπάνης ή ρυθμίσεων, χρησιμοποιείται ένα μικρό κομμάτι κώδικα, το οποίο κάνει μια χοντροειδή υπόθεση για το αν το αρχείο είναι με κωδικοποίηση χαρακτήρων «utf-8» ή «windows-1253» και αντίστοιχα φορτώνει. Στην αποθήκευση αποθηκεύονται όλα σαν «utf-8». * Κώδικας που (μετά από τα 14 χρόνια ζωής του προγράμματος) είχε γίνει παρωχημένος (deprecated), αντικαταστάθηκε. * Διορθώθηκε μια συνθήκη ανταγωνισμού (race contition) μεταξύ 4 νημάτων (threads), η οποία παραδόξως μέχρι τώρα δεν είχε ευοδωθεί ποτέ, αν και θα έπρεπε. Αν είχε ευοδωθεί, δεν θα λειτουργούσε το PHP. * Απλοποιήθηκε ο κώδικας που καλεί τα PHP scripts. * Εναρμονισμός με τις Φ.830/56/999997/Σ.5711/18 Οκτ 17/ΓΕΣ/ΔΟΙ και Φ.830/58/1001504/Σ.5959/1 Νοε 17/ΓΕΣ/ΔΟΙ. * Η αποθήκευση δαπανών και ρυθμίσεων έγινε γρηγορότερη. * Η εξαγωγή δαπανών έγινε γρηγορότερη.